# startup-rag

./: .env.example  .gitignore  ARCHITECTURE.md  CAPABILITIES.md  CHANGES.md  DEMO_GUIDE.md  DEPLOYMENT.md  Dockerfile.api  Dockerfile.streamlit  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  INDEX.md  INSTALLATION.md  PROJECT_SUMMARY.md  RAG_IMPROVEMENTS.md  README.md  STATUS.md  SYSTEM_OVERVIEW.txt  app.py  docker-compose.yml  examples.py  pyproject.toml  test_all_improvements.py  test_bm25_fix.py  test_priority2_metadata.py
samples/: sample_meeting_minutes.txt  sample_progress_report.txt  sample_research_paper.txt
scripts/: quick_start.sh
src/: __init__.py  adaptive_chunking.py  api.py  chunking.py  config.py  document_loader.py  metadata_tagger.py  query_rewriter.py  rag_pipeline.py  vector_store.py
